--- a/apps/event-handler/package.json
+++ b/apps/event-handler/package.json
@@ -3,21 +3,25 @@
 	"private": true,
 	"type": "module",
 	"main": "dist/index.js",
-
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build && node build.mjs",
-		"start": "node ."
-	}, 
-
+		"start": "node .",
+		"check": "tsc --build && eslint src --config eslint.config.mjs"
+	},
 	"dependencies": {
 		"@dndevops/module-event-receiver": "workspace:^",
-		"@dndevops/module-event-worker": "workspace:^"
+		"@dndevops/module-event-worker": "workspace:^",
+		"effect": "catalog:"
 	},
 	"devDependencies": {
+		"@eslint/js": "catalog:",
 		"@types/node": "catalog:",
 		"esbuild": "catalog:",
+		"eslint": "catalog:",
+		"eslint-plugin-only-warn": "catalog:",
+		"rimraf": "catalog:",
 		"typescript": "catalog:",
-		"rimraf": "catalog:"
+		"typescript-eslint": "catalog:"
 	}
 }
