--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,20 +3,20 @@
 	"private": true,
 	"type": "module",
 	"main": "dist/index.js",
-
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build && node build.mjs",
-		"start": "node ."
-	}, 
-
-	"dependencies": {
-        
+		"start": "node .",
+		"check": "tsc --build && eslint src --config eslint.config.mjs"
 	},
 	"devDependencies": {
+		"@eslint/js": "catalog:",
 		"@types/node": "catalog:",
 		"esbuild": "catalog:",
+		"eslint": "catalog:",
+		"eslint-plugin-only-warn": "catalog:",
+		"rimraf": "catalog:",
 		"typescript": "catalog:",
-		"rimraf": "catalog:"
+		"typescript-eslint": "catalog:"
 	}
 }
