--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -3,22 +3,25 @@
 	"private": true,
 	"type": "module",
 	"main": "dist/index.js",
-
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build && node build.mjs",
-		"start": "node ."
-	}, 
-
+		"start": "node .",
+		"check": "tsc --build && eslint src --config eslint.config.mjs"
+	},
 	"dependencies": {
-		"@dndevops/module-game-simulation": "workspace:^",
+		"@dndevops/module-game-board-storage": "workspace:^",
 		"@dndevops/module-game-manipulation": "workspace:^",
-		"@dndevops/module-game-board-storage": "workspace:^"
+		"@dndevops/module-game-simulation": "workspace:^"
 	},
 	"devDependencies": {
+		"@eslint/js": "catalog:",
 		"@types/node": "catalog:",
 		"esbuild": "catalog:",
+		"eslint": "catalog:",
+		"eslint-plugin-only-warn": "catalog:",
+		"rimraf": "catalog:",
 		"typescript": "catalog:",
-		"rimraf": "catalog:"
+		"typescript-eslint": "catalog:"
 	}
 }
