--- a/apps/identity/tsconfig.json
+++ b/apps/identity/tsconfig.json
@@ -10,6 +10,7 @@
     "include": [ "src/**/*.ts" ],
     "references": [
         { "path": "../../modules/identity" },
+        { "path": "../../libraries/public-api"},
         { "path": "../../libraries/identity" },
         { "path": "../../libraries/errors" }
     ]
