--- a/libraries/identity/package.json
+++ b/libraries/identity/package.json
@@ -10,11 +10,16 @@
 	},
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
-		"build": "tsc --build"
+		"build": "tsc --build",
+		"check": "tsc --build && eslint src --config eslint.config.mjs"
 	},
 	"devDependencies": {
+		"@eslint/js": "catalog:",
 		"@types/node": "catalog:",
+		"eslint": "catalog:",
+		"eslint-plugin-only-warn": "catalog:",
 		"rimraf": "catalog:",
-		"typescript": "catalog:"
+		"typescript": "catalog:",
+		"typescript-eslint": "catalog:"
 	}
 }
