--- a/modules/event-receiver/package.json
+++ b/modules/event-receiver/package.json
@@ -1,28 +1,28 @@
 {
 	"name": "@dndevops/module-event-receiver",
-	
 	"private": true,
-
 	"type": "module",
 	"types": "./dist/index.d.ts",
-    "exports": {
-        ".": {
-            "import": "./dist/index.js"
-        }
-    },
-
+	"exports": {
+		".": {
+			"import": "./dist/index.js"
+		}
+	},
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
-		"build": "tsc --build"
+		"build": "tsc --build",
+		"check": "tsc --build && eslint src --config eslint.config.mjs"
 	},
-	
 	"dependencies": {
-
+		"effect": "catalog:"
 	},
-	
 	"devDependencies": {
-		"typescript": "catalog:",
+		"@eslint/js": "catalog:",
 		"@types/node": "catalog:",
-		"rimraf": "catalog:"
+		"eslint": "catalog:",
+		"eslint-plugin-only-warn": "catalog:",
+		"rimraf": "catalog:",
+		"typescript": "catalog:",
+		"typescript-eslint": "catalog:"
 	}
 }
