--- a/modules/game-manipulation/package.json
+++ b/modules/game-manipulation/package.json
@@ -10,13 +10,16 @@
 	},
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
-		"build": "tsc --build"
-	},
-	"dependencies": {
+		"build": "tsc --build",
+		"check": "tsc --build && eslint src --config eslint.config.mjs"
 	},
 	"devDependencies": {
+		"@eslint/js": "catalog:",
 		"@types/node": "catalog:",
+		"eslint": "catalog:",
+		"eslint-plugin-only-warn": "catalog:",
+		"rimraf": "catalog:",
 		"typescript": "catalog:",
-		"rimraf": "catalog:"
+		"typescript-eslint": "catalog:"
 	}
 }
