--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,13 +1,18 @@
 packages:
-  - services/*
+  - apps/*
   - modules/*
   - libraries/*
 
 catalog:
+  '@effect/platform': ^0.93.3
+  '@eslint/js': 9.39.1
   '@types/node': ^24.9.2
   effect: ^3.19.3
   esbuild: ^0.25.11
+  eslint: 9.39.1
+  eslint-plugin-only-warn: 1.1.0
   rimraf: ^6.0.1
-  typescript: ^5.9.3
+  typescript: 5.9.3
+  typescript-eslint: 8.48.1
 
 injectWorkspacePackages: true
