--- a/root.tsconfig.json
+++ b/root.tsconfig.json
@@ -11,6 +11,7 @@
         "forceConsistentCasingInFileNames": true,
 
         "strict": true,
+        "exactOptionalPropertyTypes": true,
         "skipLibCheck": true,
 
         "composite": true
