Added source step to ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
           sh <(curl --proto '=https' --tlsv1.2 -L https://nixos.org/nix/install) --daemon
           mkdir -p ~/.config/nix
           echo "experimental-features = nix-command flakes" > ~/.config/nix/nix.conf
+          source ~/.bashrc
       - name: Install dependencies
         run: nix develop . --command pnpm install
       - name: Run CI
