--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
           sh <(curl --proto '=https' --tlsv1.2 -L https://nixos.org/nix/install) --daemon
           mkdir -p ~/.config/nix
           echo "experimental-features = nix-command flakes" > ~/.config/nix/nix.conf
-          source ~/.bashrc
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: nix develop . --command pnpm install
       - name: Run CI
