--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,11 +18,16 @@ jobs:
       - name: Check out branch
         uses: actions/checkout@v5
       - name: Install nixpkgs
-        run: |
-          sh <(curl --proto '=https' --tlsv1.2 -L https://nixos.org/nix/install) --daemon
-          mkdir -p ~/.config/nix
-          echo "experimental-features = nix-command flakes" > ~/.config/nix/nix.conf
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+        #run: |
+        #  sh <(curl --proto '=https' --tlsv1.2 -L https://nixos.org/nix/install) --daemon
+        #  mkdir -p ~/.config/nix
+        #  echo "experimental-features = nix-command flakes" > ~/.config/nix/nix.conf
+        #  echo "$HOME/.local/bin" >> $GITHUB_PATH
+        uses: cachix/install-nix-action@v31
+        with:
+          nix_path: nixpkgs=channel:nixos-25.05
+      - name: Pre-process dev shell
+        run: nix build --no-link .#devShells.$(nix eval --impure --raw --expr 'builtins.currentSystem').default
       - name: Install dependencies
         run: nix develop . --command pnpm install
       - name: Run CI
