--- a/modules/game-board-storage/tsconfig.json
+++ b/modules/game-board-storage/tsconfig.json
@@ -4,5 +4,5 @@
         "rootDir": "./src",
         "outDir": "./dist"
     },
-    "includes": [ "src/**/*.ts" ]
+    "include": [ "src/**/*.ts" ]
 }
