--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,10 +4,10 @@ packages:
   - libraries/*
 
 catalog:
-  '@effect/platform': ^0.93.3
+  '@effect/platform': 0.93.3
   '@eslint/js': 9.39.1
   '@types/node': ^24.9.2
-  effect: ^3.19.3
+  effect: 3.19.4
   esbuild: ^0.25.11
   eslint: 9.39.1
   eslint-plugin-only-warn: 1.1.0
