--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,6 @@ jobs:
       - name: Install dependencies
         run: nix develop . --command pnpm install
       - name: Run checks
-        run: nix develop . --command pnpm -r run check
+        run: nix develop . --command pnpm -r --workspace-concurrency=1 run check
       - name: Build apps
         run: nix develop . --command pnpm -r run build
