--- a/modules/identity/package.json
+++ b/modules/identity/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@dndevops/module-identity",
 	"private": true,
+	"version": "0.0.0",
 	"type": "module",
 	"types": "./dist/index.d.ts",
 	"exports": {
@@ -16,11 +17,19 @@
 	"dependencies": {
 		"@dndevops/library-errors": "workspace:^",
 		"@dndevops/library-identity": "workspace:^",
-		"effect": "catalog:"
+		"@effect/sql": "^0.48.6",
+		"@effect/sql-pg": "^0.49.7",
+		"effect": "catalog:",
+		"install": "^0.13.0",
+		"jsonwebtoken": "^9.0.3",
+		"nodemailer": "^7.0.10",
+		"uuid": "^13.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "catalog:",
+		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "catalog:",
+		"@types/nodemailer": "^7.0.4",
 		"eslint": "catalog:",
 		"eslint-plugin-only-warn": "catalog:",
 		"rimraf": "catalog:",
