--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@dndevops/app-game",
 	"private": true,
+	"version": "0.0.0",
 	"type": "module",
 	"main": "dist/index.js",
 	"scripts": {
