--- a/apps/identity/package.json
+++ b/apps/identity/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@dndevops/app-identity",
 	"private": true,
+	"version": "0.1.0",
 	"type": "module",
 	"main": "dist/index.js",
 	"scripts": {
@@ -11,15 +12,15 @@
 		"check": "tsc --build && eslint src --config eslint.config.mjs"
 	},
 	"dependencies": {
-		"@dndevops/app-identity": "link:",
-		"@dndevops/library-errors": "workspace:^",
-		"@dndevops/library-identity": "workspace:^",
-		"@dndevops/library-public-api": "workspace:^",
-		"@dndevops/module-identity": "workspace:^",
+		"@dndevops/library-errors": "workspace:*",
+		"@dndevops/library-identity": "workspace:*",
+		"@dndevops/library-public-api": "workspace:*",
+		"@dndevops/module-identity": "workspace:*",
 		"@effect/platform": "catalog:",
 		"@effect/platform-node": "^0.100.0",
-		"effect": "catalog:",
-		"nodemailer": "^7.0.10"
+		"@types/amqplib": "^0.10.8",
+		"amqplib": "^0.10.9",
+		"effect": "catalog:"
 	},
 	"devDependencies": {
 		"@eslint/js": "catalog:",
