--- a/deploy/compose/compose.yaml
+++ b/deploy/compose/compose.yaml
@@ -1,19 +1,16 @@
 services:
   caddy:
     image: caddy:latest
-    container_name: caddy
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "443:443"
+      - "8000:8000"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
     networks:
       - internal_net
 
-  rabbitqm:
+  rabbitmq:
     image: rabbitmq:4.2.1-management
-    container_name: rabbitmq
     environment:
       RABBITMQ_DEFAULT_USER: rabbit
       RABBITMQ_DEFAULT_PASS: carrot
@@ -22,27 +19,23 @@ services:
 
   web:
     image: hashicorp/http-echo
-    container_name: hello-world
     command: ["-text=Hello from Docker!"]
     networks:
       - internal_net
 
   mailpit:
     image: axllent/mailpit:latest
-    container_name: mailpit
     networks:
       - internal_net
 
   # App
   dndevops-identity:
     image: dndevops-identity:latest
-    container_name: dndevops-identity
     networks:
       - internal_net
 
   dndevops-identity-db:
     image: postgres:18.1
-    container_name: dndevops-identity-db
     restart: unless-stopped
     environment:
       POSTGRES_USER: user
@@ -55,13 +48,11 @@ services:
 
   dndevops-game:
     image: dndevops-game:latest
-    container_name: dndevops-game
     networks:
       - internal_net
 
   dndevops-game-db:
     image: postgres:18.1
-    container_name: dndevops-game-db
     restart: unless-stopped
     environment:
       POSTGRES_USER: user
@@ -74,7 +65,6 @@ services:
   
   dndevops-events:
     image: dndevops-events:latest
-    container_name: dndevops-events
     networks:
       - internal_net
   
