--- a/libraries/public-api/package.json
+++ b/libraries/public-api/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@dndevops/library-public-api",
 	"private": true,
+	"version": "0.0.0",
 	"type": "module",
 	"types": "./dist/index.d.ts",
 	"exports": {
