--- a/modules/game-manipulation/package.json
+++ b/modules/game-manipulation/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@dndevops/module-game-manipulation",
 	"private": true,
+	"version": "0.0.0",
 	"type": "module",
 	"types": "./dist/index.d.ts",
 	"exports": {
