--- a/libraries/domain/package.json
+++ b/libraries/domain/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@dndevops/library-errors",
+	"name": "@dndevops/library-domain",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -7,6 +7,15 @@
 	"exports": {
 		".": {
 			"import": "./dist/index.js"
+		},
+		"./api": {
+			"import": "./dist/api.js"
+		},
+		"./identity": {
+			"import": "./dist/identity.js"
+		},
+		"./errors": {
+			"import": "./dist/errors.js"
 		}
 	},
 	"scripts": {
@@ -15,7 +24,9 @@
 		"check": "tsc --build && eslint src --config eslint.config.mjs"
 	},
 	"dependencies": {
-		"effect": "catalog:"
+		"@effect/platform": "catalog:",
+		"effect": "catalog:",
+		"uuid": "^13.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "catalog:",
