--- a/packages/backend-utility/package.json
+++ b/packages/backend-utility/package.json
@@ -16,20 +16,17 @@
 	},
 	"dependencies": {
 		"@effect/platform": "catalog:",
-		"@redis/bloom": "^5.10.0",
-		"@redis/client": "^5.10.0",
-		"@redis/json": "^5.10.0",
-		"@redis/search": "^5.10.0",
-		"@redis/time-series": "^5.10.0",
-		"amqplib": "^0.10.9",
+		"amqplib": "catalog:",
 		"effect": "catalog:",
-		"redis": "^5.10.0",
-		"uuid": "^13.0.0"
+		"mongoose": "catalog:",
+		"nodemailer": "^7.0.10",
+		"uuid": "catalog:"
 	},
 	"devDependencies": {
 		"@eslint/js": "catalog:",
 		"@types/amqplib": "^0.10.8",
 		"@types/node": "catalog:",
+		"@types/nodemailer": "^7.0.4",
 		"eslint": "catalog:",
 		"eslint-plugin-only-warn": "catalog:",
 		"rimraf": "catalog:",
