--- a/packages/module-identity/package.json
+++ b/packages/module-identity/package.json
@@ -20,16 +20,15 @@
 		"@effect/sql": "^0.48.6",
 		"@effect/sql-pg": "^0.49.7",
 		"effect": "catalog:",
-		"install": "^0.13.0",
 		"jsonwebtoken": "^9.0.3",
 		"nodemailer": "^7.0.10",
-		"uuid": "^13.0.0"
+		"uuid": "catalog:",
+		"mongoose": "catalog:"
 	},
 	"devDependencies": {
 		"@eslint/js": "catalog:",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "catalog:",
-		"@types/nodemailer": "^7.0.4",
 		"eslint": "catalog:",
 		"eslint-plugin-only-warn": "catalog:",
 		"rimraf": "catalog:",
