--- a/dev-stack/compose.yaml
+++ b/dev-stack/compose.yaml
@@ -13,6 +13,13 @@ services:
     ports:
       - "1025:1025"
       - "8002:8025"
+  redis:
+    image: redis:8.4.0
+    command: ["redis-server", "/etc/redis/redis.conf"]
+    volumes:
+      - ./redis.conf:/etc/redis/redis.conf
+    ports:
+      - "6379:6379"
 
   mongo:
     image: mongo:7.0.26
