--- a/packages/backend-core/package.json
+++ b/packages/backend-core/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "@dndevops/backend-utility",
+	"name": "@dndevops/backend-core",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
 	"types": "./dist/index.d.ts",
 	"exports": {
-		"./effect": {
-			"import": "./dist/effect.js"
+		"./database": {
+			"import": "./dist/database/index.js"
 		}
 	},
 	"scripts": {
@@ -17,9 +17,11 @@
 	"dependencies": {
 		"@effect/platform": "catalog:",
 		"amqplib": "catalog:",
+		"drizzle-orm": "catalog:",
 		"effect": "catalog:",
 		"mongoose": "catalog:",
 		"nodemailer": "^7.0.10",
+		"pg": "catalog:",
 		"uuid": "catalog:"
 	},
 	"devDependencies": {
@@ -27,9 +29,12 @@
 		"@types/amqplib": "^0.10.8",
 		"@types/node": "catalog:",
 		"@types/nodemailer": "^7.0.4",
+		"@types/pg": "catalog:",
+		"drizzle-kit": "catalog:",
 		"eslint": "catalog:",
 		"eslint-plugin-only-warn": "catalog:",
 		"rimraf": "catalog:",
+		"tsx": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
 	}
