--- a/packages/backend-core/package.json
+++ b/packages/backend-core/package.json
@@ -7,12 +7,15 @@
 	"exports": {
 		"./database": {
 			"import": "./dist/database/index.js"
+		},
+		"./effect": {
+			"import": "./dist/effect/index.js"
 		}
 	},
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build",
-		"check": "tsc --build && eslint src --config eslint.config.mjs"
+		"check": "eslint src --config eslint.config.mjs"
 	},
 	"dependencies": {
 		"@effect/platform": "catalog:",
