--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ on:
       - development
 
 jobs:
-  do-ci:
+  Run-CI:
     runs-on: ubuntu-latest
     steps:
       - name: Check out branch
@@ -24,7 +24,10 @@ jobs:
         run: nix build --no-link .#devShells.$(nix eval --impure --raw --expr 'builtins.currentSystem').default
       - name: Install dependencies
         run: nix develop . --command pnpm install --frozen-lockfile
-      - name: Run checks
-        run: nix develop . --command pnpm -r --reverse --workspace-concurrency=1 run check
-      - name: Build apps
-        run: nix develop . --command pnpm -r --reverse run build
+      - name: Build applications
+        run: nix develop . --command pnpm -r --filter=@dndevops/app-* run build
+      - name: Run checks on all packages
+        run: nix develop . --command pnpm -r run check
+      - name: Create image
+        run: docker build --file images/packed/Dockerfile . --tag:dndevops:latest
+      
