--- a/packages/module-events/package.json
+++ b/packages/module-events/package.json
@@ -12,7 +12,7 @@
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build",
-		"check": "tsc --build && eslint src --config eslint.config.mjs"
+		"check": "eslint src --config eslint.config.mjs"
 	},
 	"dependencies": {
 		"@dndevops/domain": "workspace:^",
