--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -12,6 +12,6 @@
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build",
-		"check": "eslint src --config eslint.config.mjs"
+		"check": "eslint src --config ../../eslint.config.mjs"
 	}
 }
