--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -49,6 +49,8 @@ jobs:
             echo "TAG=latest" >> $GITHUB_OUTPUT
             echo "SUFFIX=" >> $GITHUB_OUTPUT
           fi
+      - name: Set lowercase owner
+        run: echo "OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -56,8 +58,8 @@ jobs:
           file: ./images/packed/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/dndevops:${{ steps.docker-tag.outputs.TAG }}
-            ghcr.io/${{ github.repository_owner }}/dndevops:${{ steps.docker-tag.outputs.VERSION }}${{ steps.docker-tag.outputs.SUFFIX }}
+            ghcr.io/${{ env.OWNER_LC }}/dndevops:${{ steps.docker-tag.outputs.TAG }}
+            ghcr.io/${{ env.OWNER_LC }}/dndevops:${{ steps.docker-tag.outputs.VERSION }}${{ steps.docker-tag.outputs.SUFFIX }}
       - name: Create image
         run: docker build --file images/packed/Dockerfile . --tag dndevops:latest
       
