--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
 	"private": true,
 	"version": "0.0.1",
 	"devDependencies": {
+		"@eslint/js": "9.39.1",
 		"@types/node": "catalog:",
 		"esbuild": "catalog:",
+		"eslint": "^9.39.2",
+		"eslint-plugin-only-warn": "1.1.0",
 		"rimraf": "catalog:",
 		"typescript": "catalog:",
-		"eslint": "^9.39.2",
-		"@eslint/js": "9.39.1",
-		"typescript-eslint": "8.48.1",
-		"eslint-plugin-only-warn": "1.1.0"
+		"typescript-eslint": "8.48.1"
+	},
+	"dependencies": {
+		"@effect/platform": "catalog:",
+		"uuid": "catalog:"
 	}
 }
