--- a/images/packed/supervisord.conf
+++ b/images/packed/supervisord.conf
@@ -13,9 +13,36 @@ redirect_stderr=true
 
 [program:identity]
 command=node /app/packages/app-identity
-autostart=true
+autostart=%(ENV_DNDEVOPS_RUN_IDENTITY)s
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-environment=HTTP_PORT=3000,HTTP_ADDRESS=127.0.0.1
+environment=HTTP_PORT=3000,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI=%(ENV_DNDEVOPS_IDENTITY_POSTGRES_URI)s
+
+[program:game]
+command=node /app/packages/app-game
+autostart=%(ENV_DNDEVOPS_RUN_GAME)s
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+environment=HTTP_PORT=3001,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI=%(ENV_DNDEVOPS_GAME_POSTGRES_URI)s
+
+[program:events]
+command=node /app/packages/app-events
+autostart=%(ENV_DNDEVOPS_RUN_EVENTS)s
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+environment=HTTP_PORT=3002,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI=%(ENV_DNDEVOPS_EVENTS_POSTGRES_URI)s
+
+[program:frontend]
+command=node /app/packages/app-frontend
+autostart=%(ENV_DNDEVOPS_RUN_FRONTEND)s
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+environment=HTTP_PORT=3003,HTTP_ADDRESS=127.0.0.1
