--- a/packages/backend-core/package.json
+++ b/packages/backend-core/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@dndevops/domain",
+	"name": "@dndevops/backend-core",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -7,11 +7,24 @@
 	"exports": {
 		".": {
 			"import": "./dist/index.js"
+		},
+		"./database": {
+			"import": "./dist/database/index.js"
 		}
 	},
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build",
 		"check": "eslint src --config ../../eslint.config.mjs"
+	},
+	"dependencies": {
+		"@types/nodemailer": "^7.0.4",
+		"drizzle-orm": "catalog:",
+		"effect": "catalog:",
+		"nodemailer": "^7.0.11",
+		"pg": "catalog:"
+	},
+	"devDependencies": {
+		"@types/pg": "catalog:"
 	}
 }
