--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,8 +4,11 @@ packages:
 catalog:
   '@effect/platform': 0.93.8
   '@types/node': ^24.9.2
-  effect: ^3.19.12
+  '@types/pg': 8.16.0
+  drizzle-orm: 0.45.1
+  effect: 3.19.12
   esbuild: ^0.25.12
+  pg: 8.16.3
   rimraf: ^6.0.1
   typescript: ^5.9.3
   uuid: ^13.0.0
