--- a/images/packed/supervisord.conf
+++ b/images/packed/supervisord.conf
@@ -2,6 +2,7 @@
 nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
+user=root
 
 [program:caddy]
 command=caddy run --config /app/Caddyfile
@@ -18,7 +19,7 @@ autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-environment=HTTP_PORT=3000,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI=%(ENV_DNDEVOPS_IDENTITY_POSTGRES_URI)s
+environment=HTTP_PORT=3000,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI="%(ENV_DNDEVOPS_IDENTITY_POSTGRES_URI)s"
 
 [program:game]
 command=node /app/packages/app-game
@@ -27,7 +28,7 @@ autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-environment=HTTP_PORT=3001,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI=%(ENV_DNDEVOPS_GAME_POSTGRES_URI)s
+environment=HTTP_PORT=3001,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI="%(ENV_DNDEVOPS_GAME_POSTGRES_URI)s"
 
 [program:events]
 command=node /app/packages/app-events
@@ -36,7 +37,7 @@ autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-environment=HTTP_PORT=3002,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI=%(ENV_DNDEVOPS_EVENTS_POSTGRES_URI)s
+environment=HTTP_PORT=3002,HTTP_ADDRESS=127.0.0.1,DNDEVOPS_POSTGRES_URI="%(ENV_DNDEVOPS_EVENTS_POSTGRES_URI)s"
 
 [program:frontend]
 command=node /app/packages/app-frontend
