--- a/packages/app-game/tsconfig.json
+++ b/packages/app-game/tsconfig.json
@@ -8,8 +8,7 @@
     },
     "include": [ "src/**/*.ts" ],
 	"references": [
-		{
-			"path": "../domain"
-		}
+		{ "path": "../domain" },
+		{ "path": "../backend-core" }
 	]
 }
