--- a/packages/app-frontend/tsconfig.json
+++ b/packages/app-frontend/tsconfig.json
@@ -4,7 +4,10 @@
         "rootDir": "./src",
         "outDir": "./dist",
 
-		"noEmit": true
+		"noEmit": true,
+		"lib": ["es5", "es6", "dom", "es2024"],
+		 "jsx": "react-jsx",
+		"skipLibCheck": true
     },
     "include": [ "src/**/*.ts" ],
 	"references": [
