--- a/packages/app-events/package.json
+++ b/packages/app-events/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
 		"build": "tsc --build && node ../../scripts/bundle-backend.mjs",
-		"check": "eslint src --config ../../eslint.config.mjs"
+		"check": "eslint src --config eslint.config.mjs",
+		"start": "node ."
 	},
 	"dependencies": {
 		"@dndevops/domain": "workspace:"
