--- a/packages/app-frontend/package.json
+++ b/packages/app-frontend/package.json
@@ -5,12 +5,18 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"clean": "rimraf dist tsconfig.tsbuildinfo",
-		"build": "tsc --build && node ../../scripts/bundle-backend.mjs",
-		"check": "eslint src --config ../../eslint.config.mjs"
+		"build": "tsc --build && node build.mjs"
 	},
 	"dependencies": {
 		"@dndevops/domain": "workspace:",
 		"@effect/platform": "catalog:",
-		"effect": "catalog:"
+		"effect": "catalog:",
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3"
+	},
+	"devDependencies": {
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"esbuild-sass-plugin": "^3.3.1"
 	}
 }
